--- a/io.ipynb
+++ b/io.ipynb
@@ -20,18 +20,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello , I am Alex\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello , I am Alex\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Once upon a time\n",
+      "There was a monkey\n",
+      "sitting on tree\n",
+      "to be continued\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Once upon a time\")\n",
     "print(\"There was a monkey\")\n",
@@ -41,9 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 20 200\n",
+      "10 * 20 = 200\n"
+     ]
+    }
+   ],
    "source": [
     "a = 10\n",
     "b = 20\n",
@@ -54,9 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Sarah , Age: 25 , Job: SDE 1\n"
+     ]
+    }
+   ],
    "source": [
     "name = 'Sarah'\n",
     "age = 25\n",
@@ -66,9 +102,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Sarah\n",
+      "Age: 25\n",
+      "Job: SDE 1\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Name:\", name)\n",
     "print(\"Age:\", age)\n",
@@ -84,9 +130,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simple interest calculator\n",
+      "📦📦📦📦📦📦📦📦📦📦\n",
+      "principle = 150000\n",
+      "rate = 2.5\n",
+      "time = 10\n",
+      "📦📦📦📦📦📦📦📦📦📦\n",
+      "simple interest = 37500.0\n"
+     ]
+    }
+   ],
    "source": [
     "p = 150000\n",
     "r = 2.5\n",
@@ -103,9 +163,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simple interest calculator\n",
+      "--------------------------\n",
+      "principle             150K\n",
+      "rate                  2.5%\n",
+      "time                   10y\n",
+      "--------------------------\n",
+      "simple interest      37.5K\n",
+      "--------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Simple interest calculator\")\n",
     "print(\"-\"*26)\n",
@@ -119,9 +194,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inception\n",
+      "You may like it but i dont care\n"
+     ]
+    }
+   ],
    "source": [
     "fav_movie = input(\"Plz enter your movie\")\n",
     "print(fav_movie)\n",
@@ -130,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +222,7 @@
      "output_type": "stream",
      "text": [
       "Result is\n",
-      "24\n"
+      "57\n"
      ]
     }
    ],
@@ -151,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +243,7 @@
      "output_type": "stream",
      "text": [
       "Result is\n",
-      "135120\n"
+      "79\n"
      ]
     }
    ],
@@ -168,6 +252,66 @@
     "b = int(input(\"enter another number\"))\n",
     "print(\"Result is\")\n",
     "print(a + b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of sphere is 314.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi = 3.14\n",
+    "r = 5\n",
+    "area = 4 * pi * r**2\n",
+    "print(\"Area of sphere is\", area)"
    ]
   },
   {
