--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -211,6 +211,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2,4,6,8,10,12,14,16,17,18,20]\n",
+    "for i in a :\n",
+    "    if i == 17:\n",
+    "        break\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2,4,6,8,10,12,14,16,17,18,20]\n",
+    "for i in a :\n",
+    "    if i == 17:\n",
+    "        continue\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ati"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Atif\"\n",
+    "for i in name:\n",
+    "    if i == \"f\":\n",
+    "        break\n",
+    "    print(i, end=\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "134\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [10,30,65,29]\n",
+    "total = 0\n",
+    "for i in a:\n",
+    "    total += i\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Areeba\n",
+      "Atif\n",
+      "Ali\n",
+      "Ayesha\n",
+      "Adeel\n",
+      "Adeel\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Areeba','Atif','Ali','Ayesha','Adeel','Adeel']\n",
+    "for i in names:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0. Areeba\n",
+      "1. Atif\n",
+      "2. Ali\n",
+      "3. Ayesha\n",
+      "4. Adeel\n",
+      "5. Adeel\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, v in enumerate(names):\n",
+    "    print(f'{i}. {v}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0. pen\n",
+      "1. pencil\n",
+      "2. eraser\n",
+      "3. sharpner\n",
+      "4. scale\n",
+      "5. book\n",
+      "6. bag\n",
+      "7. bottle\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = ['pen','pencil','eraser','sharpner','scale','book','bag','bottle','lunchbox','tiffin']\n",
+    "for i, v in enumerate(items):\n",
+    "    if i == 8:\n",
+    "        break\n",
+    "    print(f'{i}. {v}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
