--- a/List.ipynb
+++ b/List.ipynb
@@ -250,6 +250,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List Comrehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "16\n",
+      "36\n",
+      "64\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2,4,6,8,10]\n",
+    "for i in a:\n",
+    "    print(i**2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2,4,6,8,10]\n",
+    "lst= []\n",
+    "for i in a:\n",
+    "    lst.append(i**2)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16, 36, 64, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = [2,4,6,8,10]\n",
+    "square = [i**2 for i in num]\n",
+    "print(square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 8, 50, 10, 34, 54, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,4,3,5,7,5,8,50,10,34,23,54,12]\n",
+    "even_nums = [num for num in x if num%2==0]\n",
+    "print(even_nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['HELLO', 'MY', 'NAME', 'IS', 'JOY']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = ['hello','my','name','is','Joy']\n",
+    "lst = [i.upper() for i in words]\n",
+    "print(lst)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
