set and dictionary

--- a/String.ipynb
+++ b/String.ipynb
@@ -269,7 +269,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "A, B = \"2\",3\n",
+    "TXT=\"@\""
+   ]
   }
  ],
  "metadata": {
