--- a/Dictionary.ipynb
+++ b/Dictionary.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,12 +92,366 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Jack', 'age': 23, 'dept': 'Finanace', 'salary': 30000}\n"
+      "{'name': 'john', 'age': 25, 'dept': 'finance', 'salary': 30000}\n"
      ]
     }
    ],
    "source": [
     "print(info2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1st method\n",
+    "print(student['name'])\n",
+    "print(student['roll_no'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2nd method\n",
+    "print(student.get('name'))\n",
+    "print(student.get('age'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'John', 'class': '12th', 'roll_no': 12, 'age': 17, 'school': 'DPS', 'city': 'Lucknow'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to add items in a dictionary\n",
+    "student['school'] = 'DPS'\n",
+    "student['city'] = 'Lucknow'\n",
+    "print(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "class\n",
+      "roll_no\n",
+      "age\n",
+      "school\n",
+      "city\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in student:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name : John\n",
+      "class : 12th\n",
+      "roll_no : 12\n",
+      "age : 17\n",
+      "school : DPS\n",
+      "city : Lucknow\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k, v in student.items():\n",
+    "    print(f'{k} : {v}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['name', 'class', 'roll_no', 'age', 'school', 'city'])\n",
+      "dict_values(['John', '12th', 12, 17, 'DPS', 'Lucknow'])\n",
+      "dict_items([('name', 'John'), ('class', '12th'), ('roll_no', 12), ('age', 17), ('school', 'DPS'), ('city', 'Lucknow')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student.keys())\n",
+    "print(student.values())\n",
+    "print(student.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'emp001': {'name': 'John', 'age': 27, 'dept': 'HR', 'salary': 30000}, 'emp002': {'name': 'Riya', 'age': 25, 'dept': 'IT', 'salary': 40000}, 'emp003': {'name': 'Mike', 'age': 30, 'dept': 'Finance', 'salary': 35000}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "company = {\n",
+    "    'emp001' : {\n",
+    "        'name' : 'John',\n",
+    "        'age' : 27,\n",
+    "        'dept' : 'HR',\n",
+    "        'salary' : 30000\n",
+    "    },\n",
+    "    'emp002' : {\n",
+    "        'name' : 'Riya',\n",
+    "        'age' : 25,\n",
+    "        'dept' : 'IT',\n",
+    "        'salary' : 40000\n",
+    "    },\n",
+    "    'emp003' : {\n",
+    "        'name' : 'Mike',\n",
+    "        'age' : 30,\n",
+    "        'dept' : 'Finance',\n",
+    "        'salary' : 35000\n",
+    "    }\n",
+    "}\n",
+    "print(company)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pprint import pp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'emp001': {'name': 'John', 'age': 27, 'dept': 'HR', 'salary': 30000},\n",
+      " 'emp002': {'name': 'Riya', 'age': 25, 'dept': 'IT', 'salary': 40000},\n",
+      " 'emp003': {'name': 'Mike', 'age': 30, 'dept': 'Finance', 'salary': 35000}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "pp(company)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HR\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(company['emp001']['dept'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'emp001': {'name': 'John', 'age': 27, 'dept': 'HR', 'salary': 30000},\n",
+      " 'emp002': {'name': 'Riya', 'age': 25, 'dept': 'IT', 'salary': 40000},\n",
+      " 'emp003': {'name': 'Mike', 'age': 30, 'dept': 'Finance', 'salary': 35000},\n",
+      " 'emp004': {'name': 'Sam', 'age': 35, 'dept': 'Admin', 'salary': 25000}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "company['emp004'] = {\n",
+    "    'name' : 'Sam',\n",
+    "    'age' : 35,\n",
+    "    'dept' : 'Admin',\n",
+    "    'salary' : 25000\n",
+    "}\n",
+    "pp(company)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(temp['lucknow'][1])\n",
+    "print(temp['delhi'][2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average temperature in Delhi :  35.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Average temperature in Delhi : ', sum(temp['delhi'])/len(temp['delhi']) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alex\n",
+    "-> English 85\n",
+    "-> Math 90\n",
+    "-> Science 78\n",
+    "-> Total Marks 253\n",
+    "Rahul\n",
+    "-> English 80\n",
+    "-> Math 85\n",
+    "-> Science 90\n",
+    "-> Total Marks 255\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alex': {'English': 85, 'Maths': 80, 'Science': 78},\n",
+      " 'Rahul': {'English': 80, 'Maths': 85, 'Science': 90}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = {\n",
+    "    'Alex' : {\n",
+    "        'English' : 85,\n",
+    "        'Maths' : 80,\n",
+    "        'Science' : 78\n",
+    "    },\n",
+    "    'Rahul' : {\n",
+    "        'English' : 80,\n",
+    "        'Maths' : 85,\n",
+    "        'Science' : 90\n",
+    "    },\n",
+    "}\n",
+    "pp(report)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alex\n",
+      "-> English 85\n",
+      "-> Maths 80\n",
+      "-> Science 78\n",
+      "-> Total Marks :  243\n",
+      "Rahul\n",
+      "-> English 80\n",
+      "-> Maths 85\n",
+      "-> Science 90\n",
+      "-> Total Marks :  255\n"
+     ]
+    }
+   ],
+   "source": [
+    "for student, marks in report.items():\n",
+    "    print(student)\n",
+    "    for subject, mark in marks.items():\n",
+    "        print('->', subject, mark)\n",
+    "    print('-> Total Marks : ', sum(marks.values()))"
    ]
   },
   {
