# 12 user defined functions, and os module

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,37 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-07-26 12:18:39.537434\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(datetime.now())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-07-26\n",
-      "2024-07-26\n",
-      "2024-07-26 12:22:41.783773\n",
-      "26/07/2024\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# date\n",
     "date = datetime.date(datetime.now())\n",
@@ -206,6 +187,300 @@
     "print(now)\n",
     "formatted = now.strftime(\"%d/%m/%Y\")\n",
     "print(formatted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"current location\")\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('list all files ')\n",
+    "content = os.listdir()\n",
+    "for item in content:\n",
+    "    print(f\"🗄️{item}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content = os.listdir(\"C:/Program Files\")\n",
+    "for item in content:\n",
+    "    print(f\"🗄️{item}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content = os.listdir(\"C:/Program Files\")\n",
+    "for item in content:\n",
+    "    path = f\"C:/Program Files/{item}\"\n",
+    "    is_file =os.path.isfile(path)\n",
+    "    if is_file:\n",
+    "        print(f\"📄{item}\")\n",
+    "    else:\n",
+    "        print(f\"📁{item}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "content = os.listdir(\"C:/users/zaid/documents\")\n",
+    "for item in content:\n",
+    "    path = f\"C:/users/zaid/documents/{item}\"\n",
+    "    is_file =os.path.isfile(path)\n",
+    "    if is_file:\n",
+    "        print(f\"📄{item}\")\n",
+    "    else:\n",
+    "        print(f\"📁{item}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(\"a/b/c\", exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(\"C:/important/work\", exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# User defined functions\n",
+    "### stage 1: define a function (create)\n",
+    "```python\n",
+    "def fun_name([params...]):\n",
+    "    statements\n",
+    "    ...\n",
+    "    [return value]\n",
+    "```\n",
+    "### stage 2: call the function (use)\n",
+    "```python\n",
+    "fun_name([args...])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def adder(a,b):\n",
+    "    total = a + b\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adder(10, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3698"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 1299\n",
+    "y = 2399\n",
+    "adder(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple_interest(p, r, t):\n",
+    "    si = p * r * t / 100\n",
+    "    a = si + p  \n",
+    "    return si, a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30000.0, 230000.0)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = 200000\n",
+    "r = 1.5\n",
+    "t = 10\n",
+    "simple_interest(p, r, t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2461.76"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def area_of_spehere(r):\n",
+    "    area = 4 * 3.14 * r * r\n",
+    "    return area\n",
+    "\n",
+    "r = 10\n",
+    "area_of_spehere(r)\n",
+    "r = 14\n",
+    "area_of_spehere(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adder(10, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "5538.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans = adder(15,6)\n",
+    "print(ans)\n",
+    "result = area_of_spehere(ans)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "total words: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# waf to count the number of words in a sentence\n",
+    "def word_count(sentence):\n",
+    "    words = sentence.split()\n",
+    "    return len(words)\n",
+    "\n",
+    "sentence = \"I am a student\"\n",
+    "print(word_count(sentence))\n",
+    "\n",
+    "sentence = \"this is a long sentence with many words, okay?\"\n",
+    "size = word_count(sentence)\n",
+    "print(f'total words: {size}')"
    ]
   },
   {
