# 13 args, kwargs, lambda, map

--- a/functions.ipynb
+++ b/functions.ipynb
@@ -269,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs(\"a/b/c\", exist_ok=True)"
+    "os.makedirs(\"folder1/folder2\", exist_ok=True)"
    ]
   },
   {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,40 +312,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "adder(10, 12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3698"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 1299\n",
     "y = 2399\n",
@@ -354,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,20 +344,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(30000.0, 230000.0)"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "p = 200000\n",
     "r = 1.5\n",
@@ -389,20 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2461.76"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def area_of_spehere(r):\n",
     "    area = 4 * 3.14 * r * r\n",
@@ -416,38 +372,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "22"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "adder(10, 12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21\n",
-      "5538.96\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ans = adder(15,6)\n",
     "print(ans)\n",
@@ -457,18 +393,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "total words: 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# waf to count the number of words in a sentence\n",
     "def word_count(sentence):\n",
@@ -481,6 +408,256 @@
     "sentence = \"this is a long sentence with many words, okay?\"\n",
     "size = word_count(sentence)\n",
     "print(f'total words: {size}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# required positional parameter\n",
+    "def multiplier(a,b,c,d):\n",
+    "    ans = a * b * c * d\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(multiplier(1,2,3,4))            # positional argument\n",
+    "print(multiplier(a=2, b=3, c=4, d=5)) # keyword argument\n",
+    "print(multiplier(b=3, c=3, a=1, d=4)) # keyword argument in any order\n",
+    "print(multiplier(1, 2, d=5, c=5))     # mix of positional and keyword argument\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# default parameter\n",
+    "def multiplier_v2(a, b, c, d=1):\n",
+    "    ans = a * b * c * d\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(multiplier_v2(1,2,3,4))\n",
+    "print(multiplier_v2(1,2,3))  # d is optional (default value = 1)\n",
+    "print(multiplier_v2(1,2,3, d=4)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiplier_v3(a=1, b=1, c=1, d=1):\n",
+    "    ans = a * b * c * d\n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(multiplier_v3())\n",
+    "print(multiplier_v3(10))\n",
+    "print(multiplier_v3(b=10))\n",
+    "print(multiplier_v3(10, 20))\n",
+    "print(multiplier_v3(10, c=20))\n",
+    "print(multiplier_v3(10, 20, 30, 40))\n",
+    "print(multiplier_v3(10, 20, d=30, c=40))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"hello world\".split(sep='o') # default parameter example in predefined function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# variable length argument\n",
+    "print()\n",
+    "print(1)\n",
+    "print(1,2,3)\n",
+    "print(1,2,3,4,5,6,7,8,9,0,1, sep='|')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stats(*nums, action='mean'):\n",
+    "    if action == 'mean':\n",
+    "        total = sum(nums)\n",
+    "        size = len(nums)\n",
+    "        return total / size\n",
+    "    elif action == 'sum':\n",
+    "        return sum(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(stats(1,2,3,4,5,6,7,8,9))\n",
+    "print(stats(22,33,44,55,66))\n",
+    "print(stats(4,5,1,2))\n",
+    "print(stats(4,5,1,2, action='sum'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "when defining a function:\n",
+    "- only one parameter can be variable length parameter (*args)\n",
+    "- only one parameter cab be variable keyword parameter (**kwargs)\n",
+    "- default parameters should be at the end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# variable length keyword argument\n",
+    "def person(**details):\n",
+    "    print(\"Details of the person\")\n",
+    "    for k, v in details.items():\n",
+    "        print(f\"{k:10}| {v}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person(name='rahul')\n",
+    "person(name='vijay', age=22, city='mumbai', country='india', gender='male')\n",
+    "person(name='arti', age=20, city='kanpur', job='engineer')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lambda expression: simple equation as functions\n",
+    "\n",
+    "mathematical function:\n",
+    "```\n",
+    "f(x) = x**2 + 1\n",
+    "g(x, y) = x**2 + y**2 + 1\n",
+    "```\n",
+    "\n",
+    "lambda expression:\n",
+    "```python\n",
+    "f = lambda x: x**2 + 1\n",
+    "g = lambda x, y: x**2 + y**2 + 1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = lambda x: x**2 + 1\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f(10))\n",
+    "print(f(2))\n",
+    "print(f(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = lambda x, y: x**2 + y**2 + 1\n",
+    "print(g(2,3))\n",
+    "print(g(3,4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [1,2,3,4,5,6,7,8,9,10]\n",
+    "f = lambda x: x**2 + 1\n",
+    "list(map(f, data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuple(map(f, data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[102, 405, 910, 1617, 2526, 3637, 4950, 6465, 8182, 222]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1 = [1,2,3,4,5,6,7,8,9,10]\n",
+    "data2 = [10,20,30,40,50,60,70,80,90,11]\n",
+    "g = lambda x, y: x**2 + y**2 + 1\n",
+    "list(map(g, data1, data2))"
    ]
   },
   {
